--- a/index.html
+++ b/index.html
@@ -1,19 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Regis</title>
-</head>
-<body>
-    <h1><b>HELLO,</b></h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>National Geographic</title>
+    <script
+      src="https://kit.fontawesome.com/6da635e2db.js"
+      crossorigin="anonymous"
+    ></script>
+    <i class="fas fa-angle-double-down"></i>
+  </head>
+  <body>
+    <nav>
+      <img src="natgeopic.jpg">
+      <a href="#">Login</a>
+      <i class="fas fa-search"></i>
 
-    <p>My name is Regis Bell, and this is a <i>little bit of information about me</i>.</p>
-
-<p>Some hobbies of mine include watching movies, listening to music and <mark>telling corny dad jokes.</mark></p>
-
-<p>I currently work at a fulfillment center for Amazon but it's not <del>worth making a career of</del>, so I want to learn about Full Stack coding and see where it takes me.</p>
-
-</body>
+      <a href="#">Renew</a>
+      <a href="#">Subscribe</a>
+      <a href="#">Menu</a>
+    </nav>
+    <header>
+      <h1>Lastest Stories</h1>
+      <p>
+        <span>Subscribe</span> for full access to read stories from National
+        Geographic.
+      </p>
+    </header>
+    <main>
+      <div class="news-container">
+        <div class="main-news">
+          <h3>Science<span> Coronavirus </span></h3>
+          <p>What to expect with COVID-19 vaccienes for kids ages 5 to 11</p>
+          <p class="read-text"><i class="fas fa-bars"></i> Read</p>
+        </div>
+        <div class="secondary-news">
+          <h3>Science</h3>
+          <p>Signs of an extreme planet found in anouther galaxy</p>
+          <p class="read-text">Read</p>
+          <i class="fas fa-bars"></i>
+        </div>
+        <div class="secondary-news">
+          <h3>Travel</h3>
+          <p>Can UNESCO status save the world's oldest mummies?</p>
+          <p class="read-text">Read</p>
+          <i class="fas fa-bars"></i>
+        </div>
+        <div class="pick-container">
+            <div class="Pick-element">
+                <!--add an image-->
+                <h3>Animals</h3>
+                <p>New clues may explain</p>
+            </div>
+        </div>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
